change in structure - loan, loan payment, transaction, account; audit added